[package]
name = "pratham_path_follower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "pure_pursuit"
path = "src/pure_pursuit.rs"

[dependencies]
anyhow = "*"

[dependencies.rclrs]
version = "*"

[dependencies.std_msgs]
version = "*"

[dependencies.geometry_msgs]
version = "*"

[dependencies.nav_msgs]
version = "*"
